@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

class Personnage
{
    nom
    pseudo
}

class Dame extends Personnage
{
    estLibre
}

class Brigand extends Personnage implements HorsLaLoi
{
    look
    recompense
    estLibre
}

class Cowboy extends Personnage
class Narrateur extends Personnage
class Ripou extends Cowboy implements HorsLaLoi

class Boisson
{
}

class Substantif
{
    nom
}

enum Genre <<enum>>
{
    FEMININ
    MASCULIN
}

interface HorsLaLoi <<interface>>

Personnage " *\t" - "\t1" Boisson : Préfère >
Personnage "*" - "1" Boisson : \nBoit >
Boisson "1\t" - "\t1" Substantif : Désigne <
Substantif "1..*" -- "1" Genre : Possède >

Cowboy " 1\t" - "\t*" Dame : Délivre >
Dame "\t*" -- "1" Brigand : Kidnappe <
Cowboy " 1\t" -- "\t*" Brigand : Capture >
Cowboy " 1\t" -- " 1\t" Brigand : TireSur >

Ripou "1" --- "1" Brigand : Libère >


'Ex2.1'

class Sherif extends Cowboy

class Sherif {

}

Sherif  -- "\t*" HorsLaLoi : Recherche >

'Ex3.1'

class Barman extends Personnage

class Barman {

}

Barman -- "\t1" Personnage : Sert >

@enduml
